@@ -757,7 +757,7 @@ var $ct_array1 = array();
   
   function update_light_chart($archive_path, $newest_arch_data=false, $days_span=1) {
   
-  global $ct_conf, $ct_var, $ct_gen, $base_dir, $light_chart_first_build_count;
+  global $ct_conf, $ct_var, $ct_gen, $base_dir, $system_info, $light_chart_first_build_count;
   
   $arch_data = array();
   $queued_arch_lines = array();
@@ -948,8 +948,20 @@ var $ct_array1 = array();
     ) {
     
       
-      // Avoid overloading low power devices with the first build hard limit
-      if ( !$newest_light_timestamp && $light_chart_first_build_count >= $ct_conf['dev']['light_chart_first_build_hard_limit'] ) {
+      // Avoid overloading low power devices with the SCALED first build hard limit
+      // (multiplies the first build limit by the number of available CPU threads)
+      // [less cores == lower hard limit == NOT OVERLOADING SLOW DEVICES]
+      // [more cores == higher hard limit == FASTER ON FAST DEVICES]
+      if ( isset($system_info['cpu_threads']) && $system_info['cpu_threads'] > 1 ) {
+      $scaled_first_build_hard_limit = ($ct_conf['dev']['light_chart_first_build_hard_limit'] * $system_info['cpu_threads']);
+      }
+      // Doubles as failsafe (if number of threads not detected on this system, eg: windows devices)
+      else {
+      $scaled_first_build_hard_limit = $ct_conf['dev']['light_chart_first_build_hard_limit'];
+      }
+      
+      
+      if ( !$newest_light_timestamp && $light_chart_first_build_count >= $scaled_first_build_hard_limit ) {
       return false;
       }
       // Count first builds, to enforce first build hard limit
