@@ -5834,6 +5834,10 @@ v6.00.2 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIM
 
 -BUG FIX: (still dev-pre, no bug found yet to trigger a release)
 
+-Better user experience during import / restore of large price chart data sets (on low power AND high power devices...multiplies the "light_chart_first_build_hard_limit" value set in the developer config section, by the number of CPU cores IF detected) 
+
+-Better user experience running "ADD-WIN10-SCHEDULER-JOB.bat" to create a scheduled background task on Windows
+
 -Documentation additions / revisions
 
 v6.00.9 AND HIGHER RESETS ANY *DEFAULT DEMO* LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIME DURING UPGRADES FROM V6.00.8 OR LOWER.
